# ai-clip-farm

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_production_hardening.py
app/: __init__.py  main.py
app/api/: routes.py  schemas.py
app/core/: cleanup.py  config.py  database.py  exceptions.py  gpu.py  logging.py  metrics.py  security.py  validation.py
app/models/: __init__.py  schema.py
app/pipeline/: __init__.py  analyze.py  claude_client.py  cut.py  ffmpeg_utils.py  ingest.py  metadata.py  orchestrator.py  reframe.py  subtitles.py  transcribe.py
app/web/: app.js  index.html  styles.css
app/workers/: celery_app.py  tasks.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  INSTALL.md  MONITORING.md  PERFORMANCE.md  SECURITY_CHECKLIST.md
n8n/workflows/: batch-from-list.json  submit-and-notify.json
nginx/: nginx.conf
nginx/conf.d/: clipfarm.conf.example
tests/: conftest.py
tests/integration/: conftest.py  test_api.py  test_full_pipeline.py
tests/unit/: test_analyze.py  test_claude_client.py  test_cleanup.py  test_config.py  test_ffmpeg_utils.py  test_gpu.py  test_ingest.py  test_metadata.py  test_orchestrator.py  test_reframe.py  test_security.py  test_subtitles.py  test_transcribe.py  test_validation.py
