[project]
name = "ai-clip-farm"
version = "1.0.0"
description = "Local-first automated vertical clip generation pipeline"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E", "F", "W",     # pycodestyle / pyflakes
    "I",               # isort
    "UP",              # pyupgrade
    "B",               # bugbear (common bug patterns)
    "C4",              # comprehensions
    "SIM",             # simplify
    "RUF",             # ruff-specific
]
ignore = [
    "E501",  # line length is handled by the formatter, not worth blocking on
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # asserts are expected in tests

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom is `param: T = Depends(...)` /
# `= File(...)` / `= Form(...)` — a function call in an argument default is
# exactly how FastAPI is designed to be used, not the mutable-default-arg
# footgun B008 exists to catch. Telling ruff these specific calls are
# immutable/safe suppresses the false positive without disabling B008
# (and its real protections) for the rest of the codebase.
extend-immutable-calls = [
    "fastapi.Depends", "fastapi.File", "fastapi.Form",
    "fastapi.Query", "fastapi.Header", "fastapi.Path",
    "fastapi.Body", "fastapi.Security",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
exclude = ["alembic/", "tests/"]

[[tool.mypy.overrides]]
module = ["cv2.*", "mediapipe.*", "faster_whisper.*", "yt_dlp.*", "slowapi.*"]
ignore_missing_imports = true


[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --cov=app --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: full-pipeline / multi-component tests (slower)",
    "unit: fast, isolated unit tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "app/web/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "def __repr__",
]
# Verified for real: 186 passed / 1 skipped (the real-ffmpeg pipeline test,
# which needs ffmpeg installed — it runs in CI, not on every dev machine),
# 81% measured coverage, on a local Python 3.11 run with the full dependency
# set installed (2026-07-23). Set a few points below the measured number as
# headroom rather than exactly at it — CI's Linux runner + real ffmpeg
# should land at or above this local Windows number, not below it (the
# skipped real-ffmpeg test alone covers real reframe.py/ffmpeg_utils.py
# paths this run couldn't reach). Ratchet toward 90 as coverage grows; only
# raise it again backed by another verified green run, not a guess.
fail_under = 75
